cmake_minimum_required(VERSION 3.20.0)
project(CUVIS.C.EXMPLES C)
add_subdirectory(01_loadMeasurement)
add_subdirectory(02_reprocessMeasurement)
add_subdirectory(03_exportMeasurement)
add_subdirectory(04_changeDistance)
add_subdirectory(05_recordSingleImages)
add_subdirectory(06_recordVideo)
add_subdirectory(07_recordVideoFromSessionFile)
